Fixes the global search box being wrong height.

--- a/tool-ui/src/main/webapp/style/cms.less
+++ b/tool-ui/src/main/webapp/style/cms.less
@@ -948,6 +948,7 @@ input[type=text].expandable { min-width: 5em; }
     top: 0;
 
     .searchInput input[type=text] {
+        height: 30px;
         width: 300px;
     }
 }
